--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-index.html
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Сайт на Bootstrap 4 + BEM</title>
+</head>
+
+<body>
+    
+    <header class="menu-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-2">
+                    <img src="image/logo.png" alt="logo" class="logo">
+                </div>
+                <div class="col-xl-8 ml-auto align-self-center">
+                    <nav>
+                        <ul class="menu d-flex justify-content-end">
+                            <li class="menu__item"><a href="#">Home</a></li>
+                            <li class="menu__item"><a href="#">About</a></li>
+                            <li class="menu__item"><a href="#">Servicing</a></li>
+                            <li class="menu__item"><a href="#">Portfolio</a></li>
+                            <li class="menu__item"><a href="#">Blog</a></li>
+                            <li class="menu__item"><a href="#">Contact us</a></li>
+                            <li class="menu__item"><i class="fas fa-search"></i></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <h1 class="header__title">Web development project</h1>
+                    <p class="header__text">Very suitable to support all web development project</p>
+                    <button class="button button_empty">Our services</button>
+                    <button class="button button_full">Hire is now</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="about">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">About Us</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id
+                        laboriosam saepe voluptate. Accusantium!</p>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-xl-3"><img src="image/internet.png" alt="">
+                    <h3 class="about__h3">Awesome Icons</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eveniet
+                        in laboriosam nam nobis odio.</p>
+                </div>
+                <div class="col-xl-3"><img src="image/transfer.png" alt="">
+                    <h3 class="about__h3">One Page</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio enim
+                        laborum natus necessitatibus officia repudiandae!</p>
+                </div>
+                <div class="col-xl-3"><img src="image/head.png" alt="">
+                    <h3 class="about__h3">Fully Responsive</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et
+                        exercitationem officia soluta ut.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+</body>
+
+</html>
