--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-    
     <header class="menu-bar">
         <div class="container">
             <div class="row">
@@ -44,8 +43,8 @@
                 <div class="col-xl-12">
                     <h1 class="header__title">Web development project</h1>
                     <p class="header__text">Very suitable to support all web development project</p>
-                    <button class="button button_empty">Our services</button>
-                    <button class="button button_full">Hire is now</button>
+                    <button class="button">Our services</button>
+                    <button class="button">Hire is now</button>
                 </div>
             </div>
         </div>
@@ -53,7 +52,7 @@
     <section class="about">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-8">
+                <div class="col-xl-8 about__section">
                     <h2 class="about__title">About Us</h2>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id
                         laboriosam saepe voluptate. Accusantium!</p>
@@ -75,6 +74,94 @@
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et
                         exercitationem officia soluta ut.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our Services</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id
+                        laboriosam saepe voluptate. Accusantium!</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <h3 class="about__h3">Fully Responsive</h3>
+                        <p class="about__text services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cupiditate, est et
+                            exercitationem officia soluta ut.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our Services</h2>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id
+                        laboriosam saepe voluptate. Accusantium!</p>
+                </div>
+            </div>
+            <div class="row">
+
             </div>
         </div>
     </section>
