add gulp project

--- a/index.html
+++ b/index.html
@@ -59,17 +59,20 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="col-xl-3"><img src="image/internet.png" alt="">
+                <div class="col-xl-3">
+                    <img src="image/internet.png" alt="">
                     <h3 class="about__h3">Awesome Icons</h3>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eveniet
                         in laboriosam nam nobis odio.</p>
                 </div>
-                <div class="col-xl-3"><img src="image/transfer.png" alt="">
+                <div class="col-xl-3">
+                    <img src="image/transfer.png" alt="">
                     <h3 class="about__h3">One Page</h3>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio enim
                         laborum natus necessitatibus officia repudiandae!</p>
                 </div>
-                <div class="col-xl-3"><img src="image/head.png" alt="">
+                <div class="col-xl-3">
+                    <img src="image/head.png" alt="">
                     <h3 class="about__h3">Fully Responsive</h3>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et
                         exercitationem officia soluta ut.</p>
@@ -154,19 +157,40 @@
     <section class="portfolio">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-8">
-                    <h2 class="about__title">Latest Works</h2>
-                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id
-                        laboriosam saepe voluptate. Accusantium!</p>
-                        <button class="button">All</button>
-                        <button class="button">Web design</button>
-                        <button class="button">Ui/Ux design</button>
-                        <button class="button">Mockups</button>
-                </div>
-            </div>
-            <div class="row">
-
-            </div>
+				<div class="col-xl-8">
+					<h2 class="about__title">Latest Works</h2>
+					<p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda id laboriosam saepe voluptate. Accusantium!</p>
+					<button class="button" filter="all">All</button>
+					<button class="button" filter="wd">Web design</button>
+					<button class="button" filter="ud">Ui/Ux design</button>
+					<button class="button" filter="moc">Mockups</button>
+				</div>
+			</div>
+			<div class="row filter">
+				<div class="col-xl-4">
+					<img src="image/item1.png" alt="item1" filter="wd" />
+				</div>
+				<div class="col-xl-4">
+					<img src="image/item2.png" alt="item2" filter="moc" />
+				</div>
+				<div class="col-xl-4">
+					<img src="image/item3.png" alt="item3" filter="wd" />
+				</div>
+				<div class="col-xl-4">
+					<img src="image/item4.png" alt="item4" filter="moc" />
+				</div>
+				<div class="col-xl-4">
+					<img src="image/item5.png" alt="item5" filter="ud" />
+				</div>
+				<div class="col-xl-4">
+					<img src="image/item6.png" alt="item6" filter="ud" />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-12">
+					<button class="button">View all</button>
+				</div>
+			</div>
         </div>
     </section>
 
